k8s/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: robo-stack-prod
  labels:
    app.kubernetes.io/part-of: robo-stack
    env: prod
